<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".SoundBasedMapperFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tvRotationLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/distance"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvDistance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvDirection"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textSize="18sp"
                        android:textColor="@color/purple_700"
                        android:gravity="center"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/tvMagneticFieldLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magnetic_field"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvOrientationAngles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/_0_0_0"
                    android:textSize="16sp" />
            </LinearLayout>


        </ScrollView>


        <ImageView
            android:id="@+id/ivRoom"
            android:layout_width="match_parent"
            android:layout_height="299dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:contentDescription="@string/room" />

        <ImageView
            android:id="@+id/ivGraph"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/black"
            android:contentDescription="@string/graph" />

        <Button
            android:id="@+id/playSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/play" />
    </LinearLayout>

</FrameLayout>